--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -13,7 +13,8 @@
             android:id="@+id/taskname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:inputType="textCapSentences|textAutoComplete" />
 
         <Button
             android:id="@+id/add"
